--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,89 +25,89 @@ jobs:
     - name: Run linter
       run: flake8 . --count --statistics
 
-  test:
-    strategy:
-      matrix:
-        os: [ubuntu-24.04]
-        node-version: [12.x, 14.x]
-        python-version: [3.12]
+  # test:
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-24.04]
+  #       node-version: [12.x, 14.x]
+  #       python-version: [3.12]
 
-    runs-on: ${{ matrix.os }}
+  #   runs-on: ${{ matrix.os }}
 
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_HOST: localhost
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: cigionline
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+  #   services:
+  #     postgres:
+  #       image: postgres
+  #       env:
+  #         POSTGRES_HOST: localhost
+  #         POSTGRES_USER: postgres
+  #         POSTGRES_PASSWORD: postgres
+  #         POSTGRES_DB: cigionline
+  #       ports:
+  #         - 5432:5432
+  #       options: >-
+  #         --health-cmd pg_isready
+  #         --health-interval 10s
+  #         --health-timeout 5s
+  #         --health-retries 5
 
-    if: |
-        (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]') ||
-        (github.event_name != 'pull_request_target' && github.actor != 'dependabot[bot]')
-    steps:
-    - name: Check out repository code
-      if: ${{ github.event_name != 'pull_request_target' }}
-      uses: actions/checkout@v2
-    - name: Check out Dependabot
-      if: ${{ github.event_name == 'pull_request_target' }}
-      uses: actions/checkout@v2
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Configure sysctl limits
-      run: |
-        sudo swapoff -a
-        sudo sysctl -w vm.swappiness=1
-        sudo sysctl -w fs.file-max=262144
-        sudo sysctl -w vm.max_map_count=262144
-    - uses: getong/elasticsearch-action@v1.2
-      with:
-        elasticsearch version: '7.12.1'
-        host port: 9200
-        container port: 9200
-        host node port: 9300
-        node port: 9300
-        discovery type: 'single-node'
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Install Node.js dependencies
-      run: npm ci
-      env:
-        FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
-    - name: Run migrations
-      run: python manage.py migrate
-    - name: Build webpack
-      run: npm run-script build
-      env:
-        FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
-    - name: Collect static files
-      run: python manage.py collectstatic
-    - name: Run tests
-      run: |
-        coverage run --source='.' manage.py test
-    - name: Send partial coverage report
-      env:
-        COVERALLS_PARALLEL: true
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: coveralls --service=github
+  #   if: |
+  #       (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]') ||
+  #       (github.event_name != 'pull_request_target' && github.actor != 'dependabot[bot]')
+  #   steps:
+  #   - name: Check out repository code
+  #     if: ${{ github.event_name != 'pull_request_target' }}
+  #     uses: actions/checkout@v2
+  #   - name: Check out Dependabot
+  #     if: ${{ github.event_name == 'pull_request_target' }}
+  #     uses: actions/checkout@v2
+  #     with:
+  #       ref: ${{ github.event.pull_request.head.sha }}
+  #   - name: Set up Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v2
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #   - name: Configure sysctl limits
+  #     run: |
+  #       sudo swapoff -a
+  #       sudo sysctl -w vm.swappiness=1
+  #       sudo sysctl -w fs.file-max=262144
+  #       sudo sysctl -w vm.max_map_count=262144
+  #   - uses: getong/elasticsearch-action@v1.2
+  #     with:
+  #       elasticsearch version: '7.12.1'
+  #       host port: 9200
+  #       container port: 9200
+  #       host node port: 9300
+  #       node port: 9300
+  #       discovery type: 'single-node'
+  #   - name: Install Python dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #       pip install -r requirements.txt
+  #   - name: Install Node.js dependencies
+  #     run: npm ci
+  #     env:
+  #       FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+  #   - name: Run migrations
+  #     run: python manage.py migrate
+  #   - name: Build webpack
+  #     run: npm run-script build
+  #     env:
+  #       FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+  #   - name: Collect static files
+  #     run: python manage.py collectstatic
+  #   - name: Run tests
+  #     run: |
+  #       coverage run --source='.' manage.py test
+  #   - name: Send partial coverage report
+  #     env:
+  #       COVERALLS_PARALLEL: true
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     run: coveralls --service=github
 
   send_coverage_report:
     needs: test
