CIGI-1095: Implement events registration (#2968)
* Add event registration models

* Add panels and models

* Use custom tab and fix migrations

* fix migrations

* Add templates

* Fix admin panels not working

* Update form logic

* Update hooks

* Add file upload, fix fields errors, add report button

* Fix invite issues

* Fix report

* Add styling

* add new admin views

* hide registration button if not open

* use wagtail docs instead of fileupload

* Add answers to registrant report

* Add conditional field

* Update templates

* Add banner image

* Disable 2fa

* Use registration templates

* Fix clean issue

* Styling updates

* Modify admin interface

* Add new field type and improve editor experience

* implement email templates

* Implement more complex email templates

* Add self-service registration management features and update email templates

* Improve registration management page layout and styling

* Enhance EmailTemplate model with preview support and update EmailTemplateViewSet to display titles as links

* Add EmailCampaign model and management command for sending scheduled emails

* Implement duplicate registration handling and update registration result messaging

* Add registrant answers block to email templates

* Add email template overrides to RegistrationType model and enhance email merge variables

* Add email handling for duplicate registrations and update registration form messaging

* update duplicate confirmation template to include answers and fix manage template missing fields

* Implement multiple registrations

* Refactor registration handling to ensure atomic transactions for group and individual registrations, preventing orphaned records and improving error handling.

* Refactor conditional handling in event registration forms for improved clarity and maintainability; enhance template compatibility for Django.

* Add option to register without an invite and update templates accordingly

* Add group registrant answers renderin

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+premailer>=3.10.0
 anyascii==0.2.0
 asgiref==3.8.1
 astroid==2.12.12
@@ -44,7 +45,6 @@ isort==5.9.3
 jdcal==1.4.1
 jmespath==0.10.0
 l18n==2021.3
-lazy-object-proxy==1.6.0
 libsass==0.21.0
 mailchimp-marketing==3.0.53
 mccabe==0.7.0
