--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "scripts": {
     "build": "rimraf static/bundles && cross-env NODE_ENV=production webpack --mode production --progress",
     "heroku-postbuild": "rimraf static/bundles && cross-env NODE_ENV=production webpack --mode production --progress",
-    "lint:js": "eslint . --ext .js",
+    "lint:js": "eslint .",
+    "lint:js:fix": "eslint . --fix",
+    "format": "prettier --write 'cigionline/static/**/*.js'",
+    "format:check": "prettier --check 'cigionline/static/**/*.js'",
     "start": "cross-env NODE_ENV=development webpack --mode development --progress --watch"
   },
   "dependencies": {
@@ -51,11 +54,12 @@
     "cross-env": "7.0.3",
     "css-loader": "5.2.6",
     "cssnano": "5.0.6",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.5",
+    "@eslint/js": "^9.20.0",
+    "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "prettier": "^3.4.2",
     "file-loader": "6.2.0",
     "image-webpack-loader": "8.1.0",
     "luxon": "1.28.0",
