--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ env:
   FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
 jobs:
-  lint-js:
+  lint-and-format:
     runs-on: ubuntu-latest
 
     if: |
@@ -20,39 +20,20 @@ jobs:
     steps:
       - name: Check out repository code
         if: ${{ github.event_name != 'pull_request_target' }}
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Check out Dependabot
         if: ${{ github.event_name == 'pull_request_target' }}
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
       - name: Install dependencies
         run: npm ci
-      - name: Run JS linter
+      - name: Run ESLint
         run: npm run lint:js
-
-  lint-sass:
-    runs-on: ubuntu-latest
-
-    if: |
-        (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]') ||
-        (github.event_name != 'pull_request_target' && github.actor != 'dependabot[bot]')
-    steps:
-      - name: Check out repository code
-        if: ${{ github.event_name != 'pull_request_target' }}
-        uses: actions/checkout@v2
-      - name: Check out Dependabot
-        if: ${{ github.event_name == 'pull_request_target' }}
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 20
-      - name: Install dependencies
-        run: npm ci
+      - name: Check Prettier formatting
+        run: npm run format:check
