--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,14 @@ coverage==5.5
 coveralls==3.3.1
 cryptography==45.0.6
 dj-database-url==0.5.0
-Django==5.0.6
+Django==5.2.0
 django-appconf==1.0.4
 django-compressor==4.5
 django-debug-toolbar==5.0
 django-filter==23.3
 django-ical==1.8.0
 django-libsass==0.8
-django-modelcluster==6.3
+django-modelcluster==6.4.1
 django-otp==1.6.3
 django-recurrence==1.10.3
 django-redis==5.2.0
@@ -32,7 +32,7 @@ djangorestframework==3.15.2
 docopt==0.6.2
 docutils==0.17.1
 draftjs-exporter==2.1.7
-elasticsearch==7.12.1
+elasticsearch>=7.0.0,<8.0.0
 et-xmlfile==1.1.0
 flake8==6.1.0
 future==0.18.3
@@ -73,7 +73,7 @@ tablib==3.0.0
 typed-ast==1.5.4
 Unidecode==1.2.0
 urllib3==1.26.5
-wagtail==7.1.2
+wagtail==7.3
 wagtail-2fa==1.7.1
 wagtailmedia==0.16.0
 webencodings==0.5.1
