--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ djangorestframework==3.15.2
 docopt==0.6.2
 docutils==0.17.1
 draftjs-exporter==2.1.7
-elasticsearch>=7.0.0,<8.0.0
+elasticsearch==7.12.1
 et-xmlfile==1.1.0
 flake8==6.1.0
 future==0.18.3
